--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
+    "resolutions": {
+        "react-error-overlay": "6.0.9"
+    },
     "proxy": "http://localhost:5000",
     "eslintConfig": {
         "extends": [
