--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emailjs/browser": "^3.6.2",
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -12,6 +13,7 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
+        "emailjs-com": "^3.2.0",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
