--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-    "short_name": "LoFo - IIT Indore",
+    "short_name": "LoFo",
     "name": "Lost/Found Portal of IIT Indore",
     "icons": [
         {
-            "src": "logo2.png",
+            "src": "logo.webp",
             "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         },
         {
-            "src": "logo2.png",
+            "src": "logo.webp",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "logo2.png",
+            "src": "logo.webp",
             "type": "image/png",
             "sizes": "512x512"
         }
